// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyUser renders as expected 1`] = `
Array [
  <Text
    style={
      Object {
        "fontSize": 18,
      }
    }
  >
    Account recovery requires verified contact information
  </Text>,
  <View
    style={
      Array [
        Object {},
        Object {
          "flexDirection": "column-reverse",
        },
        Object {
          "marginVertical": 6,
        },
      ]
    }
  >
    <View
      accessibilityRole="radiogroup"
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              Object {},
            ]
          }
        >
          h***o@world.com
        </Text>
      </View>
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              Object {},
            ]
          }
        >
          ***********0000
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "hsl(190, 95%, 30%)",
          "padding": 12,
        },
        null,
        null,
        Object {
          "marginVertical": 8,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Verify
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "hsl(0, 0%, 100%)",
          "padding": 8,
        },
        null,
        null,
        Object {
          "marginVertical": 4,
          "minWidth": "50%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(190, 95%, 30%)",
            "fontSize": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Skip
    </Text>
  </View>,
]
`;

exports[`VerifyUser renders as expected with errors 1`] = `
Array [
  <Text
    style={
      Object {
        "fontSize": 18,
      }
    }
  >
    Account recovery requires verified contact information
  </Text>,
  <View
    style={
      Array [
        Object {},
        Object {
          "flexDirection": "column-reverse",
        },
        Object {
          "marginVertical": 6,
        },
      ]
    }
  >
    <View
      accessibilityRole="radiogroup"
      style={
        Object {
          "flexDirection": "column",
        }
      }
    >
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              Object {},
            ]
          }
        >
          h***o@world.com
        </Text>
      </View>
      <View
        accessibilityRole="radio"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
        type="radio"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "hsl(210, 8%, 55%)",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
              },
              Object {
                "height": 20,
                "width": 20,
              },
              undefined,
            ]
          }
          testID="amplify__radio-button__container"
        />
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              Object {},
            ]
          }
        >
          ***********0000
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "hsl(0, 75%, 85%)",
          "flexDirection": "row",
          "paddingHorizontal": 4,
          "paddingVertical": 16,
        },
        Object {
          "marginVertical": 6,
        },
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Object {
            "margin": 4,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 100%, 20%)",
            "flex": 1,
            "paddingHorizontal": 4,
          },
          Object {},
        ]
      }
    >
      Something went wrong
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "hsl(190, 95%, 30%)",
          "padding": 12,
        },
        null,
        null,
        Object {
          "marginVertical": 8,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(0, 0%, 100%)",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      Verify
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "hsl(0, 0%, 100%)",
          "padding": 8,
        },
        null,
        null,
        Object {
          "marginVertical": 4,
          "minWidth": "50%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "hsl(190, 95%, 30%)",
            "fontSize": 14,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Skip
    </Text>
  </View>,
]
`;
